fix: add legacy DSL workaround for Hilt compatibility with AGP 9.0
Hilt Gradle plugin does not yet support AGP 9.0 new DSL APIs.
See: https://github.com/google/dagger/issues/4979

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,9 @@ kotlin.stdlib.default.dependency=false
 
 # Android
 android.useAndroidX=true
+# Enable legacy DSL for Hilt compatibility with AGP 9.0
+# See: https://github.com/google/dagger/issues/4979
+android.newDsl=false
 
 # Project version (centralized)
 VERSION_NAME=0.2.0
