--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,21 +33,18 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2 # v5.0.0
 
-      - name: Build and test all modules
-        run: ./gradlew build -PexcludeExample --no-configuration-cache
-
-      - name: Publish to Central Portal (Release)
+      - name: Build, test and publish to Central Portal (Release)
         if: github.event_name == 'push' || github.event.inputs.publish_type == 'release'
-        run: ./gradlew publishAggregationToCentralPortal -PexcludeExample --no-configuration-cache
+        run: ./gradlew build publishAggregationToCentralPortal -PexcludeExample --no-configuration-cache
         env:
           CENTRAL_PORTAL_USERNAME: ${{ secrets.CENTRAL_PORTAL_USERNAME }}
           CENTRAL_PORTAL_PASSWORD: ${{ secrets.CENTRAL_PORTAL_PASSWORD }}
           SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
           SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
 
-      - name: Publish to Central Portal (Snapshot)
+      - name: Build, test and publish to Central Portal (Snapshot)
         if: github.event_name == 'workflow_dispatch' && github.event.inputs.publish_type == 'snapshot'
-        run: ./gradlew publishAggregationToCentralPortalSnapshots -PexcludeExample --no-configuration-cache
+        run: ./gradlew build publishAggregationToCentralPortalSnapshots -PexcludeExample --no-configuration-cache
         env:
           CENTRAL_PORTAL_USERNAME: ${{ secrets.CENTRAL_PORTAL_USERNAME }}
           CENTRAL_PORTAL_PASSWORD: ${{ secrets.CENTRAL_PORTAL_PASSWORD }}
