--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,4 +13,5 @@ kotest-property = { module = "io.kotest:kotest-property", version.ref = "kotest"
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
+nmcp = { id = "com.gradleup.nmcp", version.ref = "nmcp" }
 nmcp-aggregation = { id = "com.gradleup.nmcp.aggregation", version.ref = "nmcp" }
